テスト全部とおすよう二修正